Fix border gap issue

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0px;
+}
+
 .header-container, .footer{
     background-color: #1F2937;
 }
